# confluence-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
src/confluence_engine/: __init__.py  _cache.py  config.py  engine.py  fibonacci.py  indicators.py  regime.py  strategy.py  tv_symbol.py
src/confluence_engine/adapters/: __init__.py  crypto.py  forex.py  idx.py
src/confluence_engine/strategies/: __init__.py  breakout.py  mean_reversion.py
tests/: conftest.py  test_adapters.py  test_backtest.py  test_cache.py  test_config.py  test_demo_strategies.py  test_indicators.py  test_package_imports.py  test_public_api.py  test_strategy_interface.py  test_tv_symbol.py
